<resources>
    <string name="app_name">Gestor de Eventos</string>
    <string name="event_list_title">Eventos</string>
    <string name="add_event">Agregar Evento</string>
    <string name="event_form_title">Registro de Eventos</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="address">Dirección</string>
    <string name="price">Precio</string>
    <string name="date">Fecha</string>
    <string name="capacity">Aforo</string>
    <string name="save">Guardar</string>
    <string name="close">Cerrar</string>
    <string name="image_placeholder" translatable="false">Imagen del Evento</string>


</resources>
